wip - figuring out spacing below form container issue

--- a/client/public/css/form.css
+++ b/client/public/css/form.css
@@ -1,14 +1,21 @@
 .clear { clear:both;}
 
 
-
-html, body{
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    /* padding: 0; */
+    /* display: flex; */
 }
+body {
+    height: auto;
+    width: auto;
+    /* margin-left: 20px; */
+}
+
+
+
 input:focus {
   outline: none;
 }
@@ -252,8 +259,8 @@ button {
 
 #new-form {
   border: 11px solid #f3f3f3;
-  padding: 30px 0px 30px 30px;
-  margin: 30px 0px 30px 30px;
+  padding: 30px;
+  margin: 30px;
 }
 
 
@@ -290,10 +297,10 @@ button {
 }
 .page-list-container {
   grid-row: 2/3;
-  grid-column: 1/3;
+  grid-column: 1/4;
 }
 .page-map-container {
   grid-row: 2/3;
-  grid-column: 3/12;
+  grid-column: 4/12;
   max-width: 100%;
 }
